--- a/ServiceDataBase/AddNewOrder.xaml
+++ b/ServiceDataBase/AddNewOrder.xaml
@@ -14,49 +14,52 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="AddNewOrder" Height="720" Width="1280">
+        Title="                                     NOWE   ZLECENIE" Height="720" Width="1280">
     <Grid>
-        <TextBox x:Name="tbx_numerZlecenia" HorizontalAlignment="Left" Height="23" Margin="108,15,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
-        <Label Content="Numer zlecenia" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top"/>
-        <Label  Content="Rodzaj naprawy" HorizontalAlignment="Left" Margin="912,41,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_nazwisko" HorizontalAlignment="Left" Height="23" Margin="1014,213,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label  Content="Nazwisko" HorizontalAlignment="Left" Margin="916,209,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_miejscowosc" HorizontalAlignment="Left" Height="23" Margin="1099,244,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox  x:Name="tbx_kodPocztowy" HorizontalAlignment="Left" Height="23" Margin="1027,244,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67"/>
-        <Label Content="Kod i miejscowość" HorizontalAlignment="Left" Margin="858,244,0,0" VerticalAlignment="Top"/>
-        <TextBox  x:Name="tbx_ulica" HorizontalAlignment="Left" Height="23" Margin="1014,275,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Adres" HorizontalAlignment="Left" Margin="916,275,0,0" VerticalAlignment="Top"/>
-        <TextBox  x:Name="tbx_telefon" HorizontalAlignment="Left" Height="23" Margin="1014,306,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="Telefon" HorizontalAlignment="Left" Margin="916,302,0,0" VerticalAlignment="Top"/>
-        <TextBox  x:Name="tbx_nip" HorizontalAlignment="Left" Height="23" Margin="1018,337,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="Nip" HorizontalAlignment="Left" Margin="920,333,0,0" VerticalAlignment="Top"/>
-        <Label   Content="Rodzaj sprzętu" HorizontalAlignment="Left" Margin="916,78,0,0" VerticalAlignment="Top"/>
-        <Label   Content="Marka" HorizontalAlignment="Left" Margin="916,128,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_ModelSprzetu" HorizontalAlignment="Left" Height="23" Margin="1018,173,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="Model" HorizontalAlignment="Left" Margin="915,169,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_numerFabryczny" HorizontalAlignment="Left" Height="23" Margin="344,19,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="Numer fabryczny" HorizontalAlignment="Left" Margin="241,15,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_uwagi"  HorizontalAlignment="Left" Height="23" Margin="344,50,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="uwagi" HorizontalAlignment="Left" Margin="241,46,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_usterka" HorizontalAlignment="Left" Height="23" Margin="344,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="usterka" HorizontalAlignment="Left" Margin="241,83,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbx_zaliczka" HorizontalAlignment="Left" Height="23" Margin="1027,462,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label   Content="Zaliczka" HorizontalAlignment="Left" Margin="924,462,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbx_rodzajSprzetu" HorizontalAlignment="Left" Margin="1019,83,0,0" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="cbx_markaSprzetu" HorizontalAlignment="Left" Margin="1019,132,0,0" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="cbx_rodzajNaprawy" HorizontalAlignment="Left" Margin="1010,45,0,0" VerticalAlignment="Top" Width="120"/>
-        <CheckBox  x:Name="chkbx_przewodZasilajacy" Content="Przewód zasilający" HorizontalAlignment="Left" Margin="10,293,0,0" VerticalAlignment="Top" Style="{DynamicResource MaterialDesignLightCheckBox}"/>
-        <CheckBox  x:Name="chkbx_pilot"  Content="Pilot" HorizontalAlignment="Left" Margin="10,313,0,0" VerticalAlignment="Top"/>
-        <CheckBox    x:Name="chkbx_podstawa" Content="Podstawa" HorizontalAlignment="Left" Margin="10,331,0,0" VerticalAlignment="Top"/>
-        <CheckBox   x:Name="chkbx_wieszak" Content="Wieszak" HorizontalAlignment="Left" Margin="10,350,0,0" VerticalAlignment="Top"/>
-        <CheckBox   x:Name="chkbx_opakowanie" Content="Opakowanie" HorizontalAlignment="Left" Margin="10,370,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btn_dodaj"  Content="Dodaj" HorizontalAlignment="Left" Margin="15,443,0,0" VerticalAlignment="Top" Width="75" Click="Btn_dodaj_Click"/>
-        <Button x:Name="btn_anuluj"  Content="Anuluj" HorizontalAlignment="Left" Margin="15,468,0,0" VerticalAlignment="Top" Width="75" Click="Btn_anuluj_Click"/>
-        <Label   Content="Status" HorizontalAlignment="Left" Margin="907,10,0,0" VerticalAlignment="Top"/>
-        <ComboBox  x:Name="cbx_status" HorizontalAlignment="Left" Margin="954,10,0,0" VerticalAlignment="Top" Width="120"/>
-
-        <Label   Content="PLN" HorizontalAlignment="Left" Margin="1152,462,0,0" VerticalAlignment="Top"/>
-        <CheckBox   x:Name="chkbx_przywoz" Content="Przywóz" HorizontalAlignment="Left" Margin="10,388,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_numerZlecenia" HorizontalAlignment="Left" Height="23" Margin="263,22,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" />
+        <Label Content="Numer zlecenia" HorizontalAlignment="Left" Margin="165,18,0,0" VerticalAlignment="Top"/>
+        <Label  Content="Rodzaj naprawy" HorizontalAlignment="Left" Margin="934,26,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_nazwisko" HorizontalAlignment="Left" Height="23" Margin="165,111,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label  Content="Nazwisko" HorizontalAlignment="Left" Margin="24,110,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_miejscowosc" HorizontalAlignment="Left" Height="23" Margin="237,147,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="tbx_kodPocztowy" HorizontalAlignment="Left" Height="23" Margin="165,147,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="67"/>
+        <Label Content="Kod i miejscowość" HorizontalAlignment="Left" Margin="22,146,0,0" VerticalAlignment="Top"/>
+        <TextBox  x:Name="tbx_adres" HorizontalAlignment="Left" Height="23" Margin="165,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Adres" HorizontalAlignment="Right" Margin="0,177,1207,0" VerticalAlignment="Top" RenderTransformOrigin="-0.829,0.583"/>
+        <TextBox  x:Name="tbx_telefon1" HorizontalAlignment="Left" Height="23" Margin="165,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Telefon1" HorizontalAlignment="Left" Margin="24,214,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.601,3.83"/>
+        <TextBox  x:Name="tbx_nip" HorizontalAlignment="Left" Height="23" Margin="165,305,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Nip" HorizontalAlignment="Left" Margin="24,304,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.276,-1.833"/>
+        <Label   Content="Rodzaj sprzętu" HorizontalAlignment="Left" Margin="422,106,0,0" VerticalAlignment="Top"/>
+        <Label   Content="Marka" HorizontalAlignment="Left" Margin="422,156,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_ModelSprzetu" HorizontalAlignment="Left" Height="23" Margin="516,213,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Model" HorizontalAlignment="Left" Margin="421,197,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_numerFabryczny" HorizontalAlignment="Left" Height="23" Margin="533,257,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Numer fabryczny" HorizontalAlignment="Left" Margin="422,0,0,409" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="tbx_uwagi"  HorizontalAlignment="Left" Height="28" Margin="848,351,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="401"/>
+        <Label   Content="uwagi" HorizontalAlignment="Left" Margin="848,0,0,364" RenderTransformOrigin="1.286,7.333" Height="24" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="tbx_usterka" HorizontalAlignment="Left" Height="24" Margin="848,146,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="401"/>
+        <Label   Content="usterka" HorizontalAlignment="Left" Margin="848,106,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbx_zaliczka" HorizontalAlignment="Left" Height="23" Margin="138,400,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Zaliczka" HorizontalAlignment="Left" Margin="35,400,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cbx_rodzajSprzetu" HorizontalAlignment="Left" Margin="525,111,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cbx_markaSprzetu" HorizontalAlignment="Left" Margin="525,160,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cbx_rodzajNaprawy" HorizontalAlignment="Left" Margin="1068,22,0,0" VerticalAlignment="Top" Width="120"/>
+        <CheckBox  x:Name="chkbx_przewodZasilajacy" Content="Przewód zasilający" HorizontalAlignment="Left" Margin="422,349,0,0" VerticalAlignment="Top" Style="{DynamicResource MaterialDesignLightCheckBox}"/>
+        <CheckBox  x:Name="chkbx_pilot"  Content="Pilot" HorizontalAlignment="Left" Margin="422,369,0,0" VerticalAlignment="Top"/>
+        <CheckBox    x:Name="chkbx_podstawa" Content="Podstawa" HorizontalAlignment="Left" Margin="422,387,0,0" VerticalAlignment="Top"/>
+        <CheckBox   x:Name="chkbx_wieszak" Content="Wieszak" HorizontalAlignment="Left" Margin="422,406,0,0" VerticalAlignment="Top"/>
+        <CheckBox   x:Name="chkbx_opakowanie" Content="Opakowanie" HorizontalAlignment="Left" Margin="422,426,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn_dodaj"  Content="Dodaj" HorizontalAlignment="Left" Margin="860,595,0,0" VerticalAlignment="Top" Width="75" Click="Btn_dodaj_Click" RenderTransformOrigin="-1.653,-2.375"/>
+        <Button x:Name="btn_anuluj"  Content="Anuluj" HorizontalAlignment="Left" Margin="978,595,0,0" VerticalAlignment="Top" Width="75" Click="Btn_anuluj_Click"/>
+        <Label   Content="Status" HorizontalAlignment="Left" Margin="602,18,0,0" VerticalAlignment="Top"/>
+        <ComboBox  x:Name="cbx_status" HorizontalAlignment="Left" Margin="700,14,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="PLN" HorizontalAlignment="Left" Margin="263,400,0,0" VerticalAlignment="Top"/>
+        <CheckBox   x:Name="chkbx_przywoz" Content="Przywóz" HorizontalAlignment="Left" Margin="422,444,0,0" VerticalAlignment="Top"/>
+        <TextBox  x:Name="tbx_telefon2" HorizontalAlignment="Left" Height="23" Margin="165,247,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="Telefon2" HorizontalAlignment="Left" Margin="24,246,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.601,3.83"/>
+        <TextBox  x:Name="tbx_email" HorizontalAlignment="Left" Height="23" Margin="165,276,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label   Content="email" HorizontalAlignment="Left" Margin="24,275,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.601,3.83"/>
 
     </Grid>
 </Window>
