--- a/ServiceDataBase/UserPanel.xaml
+++ b/ServiceDataBase/UserPanel.xaml
@@ -32,7 +32,13 @@
                         <RowDefinition Height="615*"/>
                         <RowDefinition Height="49*"/>
                     </Grid.RowDefinitions>
-                    <DataGrid Margin="10,10,10,10"/>
+                    <DataGrid Margin="10,10,10,10">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Numer Zlecenia"/>
+                            <DataGridTextColumn Header="Nazwisko"/>
+                            <DataGridTextColumn Header="Status Naprawy"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
                     <Button x:Name="btn_new" Content="Nowe" Margin="10,10,0,10" Click="btn_new_Click" Grid.Row="1" HorizontalAlignment="Left" Width="153" />
                     <Button x:Name="btn_delete" Content="Kasuj" Margin="168,10,0,10" Click="btn_delete_Click" Grid.Row="1" HorizontalAlignment="Left" Width="153"/>
                     <Button x:Name="btn_edit" Content="Edytuj" Margin="326,10,0,10" Click="btn_edit_Click" Grid.Row="1" HorizontalAlignment="Left" Width="153" />
